--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@mercadopago/sdk-react": "^0.0.15",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
-    "firebase": "^10.5.0",
     "cors": "^2.8.5",
+    "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
@@ -25,9 +25,8 @@
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
+    "sweetalert2": "^11.7.32",
     "uuid": "^9.0.1"
-    "sweetalert2": "^11.7.32"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
