--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.15",
+    "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
